# MandelbrotViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
app/: build.gradle
app/src/androidTest/java/com/mpizzzle/mandelbrotviewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mpizzzle/mandelbrotviewer/: Complex.java  MainActivity.java  MandelbrotView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mpizzzle/mandelbrotviewer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  Mandelbrot.cpp  frag.glsl
